# seekr

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
seekr/: bootstrap.py  config.py  core.py
seekr/adapters/: __init__.py
seekr/adapters/inbound/: __init__.py
seekr/adapters/inbound/cli/: __init__.py  application.py  entrypoint.py  presenter.py
seekr/adapters/outbound/config/: __init__.py  binary_file_store.py  default_config_factory.py  encrypted_config_repository.py  fernet_cipher.py  keyring_secure_store.py
seekr/adapters/outbound/filesystem/: __init__.py  path_normalizer.py  path_redactor.py  path_scanner.py  path_validator.py  scan_roots_provider.py
seekr/adapters/outbound/persistence/sqlalchemy/: __init__.py  database_config.py  migrator.py  models.py  path_record_mapper.py  repository.py  session_factory.py
seekr/adapters/outbound/persistence/sqlalchemy/migrations/: README  __init__.py  env.py  script.py.mako
seekr/adapters/outbound/persistence/sqlalchemy/migrations/versions/: 24d1406e84ab_.py  __init__.py  b942c9892d32_.py  e088dc6c8069_.py
seekr/adapters/outbound/search/: __init__.py  rapidfuzz_search_engine.py
seekr/application/: __init__.py
seekr/application/ports/: __init__.py  config_repository.py  path_repository.py  path_scanner.py  path_services.py  search_engine.py
seekr/application/services/: __init__.py  config_sanitizer.py  contains_words_search_engine.py  fallback_search_engine.py
seekr/application/use_cases/: __init__.py  build_index.py  get_config.py  initialize_config.py  search_paths.py  set_ignores.py  show_config.py
seekr/cli/: cli.py
seekr/commands/: abstract.py  config.py  config_command.py  config_get_command.py  config_init_command.py  config_set_command.py  config_set_ignores_command.py  config_show_command.py  init_command.py  search_command.py
seekr/constants/: app.py  defaults.py  paths.py
seekr/database/: config.py  connection.py  initializer.py
seekr/database/migrations/: README  env.py
seekr/database/migrations/versions/: 24d1406e84ab_.py  b942c9892d32_.py  e088dc6c8069_.py  f3dd403b1a99_create_paths_table.py
seekr/database/models/: __init__.py  base.py  path.py
seekr/decorators/: finish_command.py
seekr/domain/: __init__.py  exceptions.py
seekr/domain/entities/: __init__.py  ignore_rule.py  indexed_path.py  scan.py
seekr/domain/services/: __init__.py  nickname_validator.py
seekr/enconder/: __init__.py
seekr/exceptions/: file.py  os.py
seekr/models/: path.py
seekr/security/: crypto.py  redact.py  secure_store.py
seekr/texts/: __init__.py  commit_disable_warning.py  config_initialized.py  config_reset.py  config_show_specific_property.py  found_paths.py  init_already_completed.py  keyring_troubleshooting.py  protocol.py  search_results.py  wellcome_init_command.py
seekr/utils/: executor.py  file_manager.py  normalize_path.py  walker.py
seekr/utils/validators/: nickname.py  path.py
tests/: fakes.py  test_build_index.py  test_cli.py  test_core.py  test_database_initializer.py  test_found_paths_text.py  test_get_config.py  test_init_already_completed_text.py  test_initialize_config.py  test_nickname_validator.py  test_path_validator.py  test_redact_path.py  test_search_paths.py  test_search_results_text.py  test_secure_store.py  test_set_ignores.py  test_show_config.py
