[project]
name = "seekr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=49.0.0",
    "keyring>=25.7.0",
    "platformdirs>=4.10.0",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "alembic>=1.18.5",
    "bandit>=1.9.4",
    "pip-audit>=2.10.1",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "taskipy>=1.14.1",
]

[tool.pytest.ini_options]
addopts = [
    "-s",
    "-vv"
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
    "*Tests",
]
python_functions = [
    "test_*",
]
testpaths = [
    "tests",
]

[tool.taskipy.tasks]
test = "pytest || [ $? -eq 5 ]"
lint = "ruff check ."
format = "ruff format ."
audit = "pip-audit"
security = "bandit -r seekr"
db-upgrade = "alembic upgrade head"
db-downgrade = "alembic downgrade -1"
db-history = "alembic history --verbose"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "SIM",
    "UP",
]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
]

[tool.pylint.format]
max-line-length = 88
