[project]
name = "seekr"
version = "0.1.0"
description = "Local file indexing and fuzzy search with reusable use cases"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "cryptography>=49.0.0",
    "keyring>=25.7.0",
    "platformdirs>=4.10.0",
    "rapidfuzz>=3.14.5",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.51",
    "typer>=0.27.0",
]

[project.scripts]
seekr = "seekr.adapters.inbound.cli.entrypoint:app"

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "pip-audit>=2.10.1",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "taskipy>=1.14.1",
]

[tool.pytest.ini_options]
addopts = [
    "-s",
    "-vv"
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
    "*Test",
    "*Tests",
]
python_functions = [
    "test_*",
]
testpaths = [
    "tests",
]

[tool.taskipy.tasks]
test = "pytest || [ $? -eq 5 ]"
lint = "ruff check ."
format = "ruff format ."
audit = "pip-audit"
security = "bandit -r seekr"
db-generate = "alembic revision --autogenerate"
db-upgrade = "alembic upgrade head"
db-push = "task db-generate && task db-upgrade"
db-downgrade = "alembic downgrade -1"
db-history = "alembic history --verbose"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "SIM",
    "UP",
]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
]

[tool.pylint.format]
max-line-length = 88
